        - Rebuild: -of<name> now converts / to \ on Windows (see ticket #85).
        - `dsss uninstall` now removes (empty) directories as well as files
          (see ticket #84).
        - Rebuild: Merged DMD 1.018.
        - Rebuild: Added proper documentation for -Dq (see ticket #90).
        - /etc will now be preferred to /usr/etc when installing to the prefix
          /usr.

0.67 from 0.66:
        - Rebuild: Fixed generation of libraries with DMD+GNU/Linux (see ticket
          #75).
        - Rebuild: Should now compile on FreeBSD (see ticket #82).
        - Added an option (--keep-response-files for DSSS and -keeprfiles for
          Rebuild) to not delete response files (see ticket #62).
        - Added the dsss.conf option 'defaultTargets' (see ticket #64).
        - Added an option to DSSS to manually specify the URL to receive the
          source list from (see ticket #77).

0.66 from 0.65:
        - Rebuild: Fixed a bug with -listnffiles and -of conflicting (see
          ticket #66).
        - Some dsss-net-installs which failed due to the above bug should
          now work (see ticket #66).
        - Rebuild: Now (again) converts all paths to backslash-delimited paths
          on Windows. Apparently DMD only does this conversion internally in
          some scenarios (see ticket #70).
        - Rebuild: Fixed a bug with documentation generation causing a segfault
          in some situations (see ticket #74).
        - Rebuild: Again moved documentation into the compiler, to fix a bug
          causing docs to be generated without candydoc.

0.65 from 0.64:
        - Now exits with the proper exit code when a subcommand fails (see
          ticket #58).
        - Argument parsing now fails properly with invalid arguments before the
          command.
        - Now always fflush's before doing a system() call, to improve output.
        - Rearranged build order to be a bit more explicit.
        - Added the new technical README.