@@ -40,7 +40,7 @@ version=-version=$i
 
 [link]
 cmd=gdmd $i -of$o
-nodarwinflag=-q,-rdynamic
+export_dynamic=-q,-rdynamic
 
 libdir=-L-L$i
 lib=-L-l$i
