@@ -6,6 +6,7 @@ SVN from 0.67:
         - Rebuild: Added proper documentation for -Dq (see ticket #90).
         - /etc will now be preferred to /usr/etc when installing to the prefix
           /usr.
+        - Rebuild: Added -no-export-dynamic flag (see ticket #91).
 
 0.67 from 0.66:
         - Rebuild: Fixed generation of libraries with DMD+GNU/Linux (see ticket
